           on self versus cast on others. looking to add group versions of buffs but
           that's not a good idea when casting on others is less affective.
           - It's very easy to hit the Armor cap. Going to decrease armor on buff spells
           accross the board somewhat to try to tone it down. Hopefully make things more
           diverse and fun at the same time.
           - Deikhan and Cleric Armor spell down to 70AC
           - Deikhan Aura of might now 40AC
           - Sanctuary protection reduced but now provides the same amount to others

06-25-21 : Monk Stuff
           - Reduce mana cost of Chain and Blur
           - Chain now works while using a weapon. Blur still requires bare hands

06-24-21 : Area Damage Upgrade
           - Area damage spells increased by 50 percent accross the board

03-12-21 : Travel updates
           - Portal should never close leaving a mount behind now
           - Cleric portals now have the same number of uses on each side
           - New Skill: The illithid wizard now teaches his desciples a bit
             of his knowledge of dimensional manipulation. 
           - New Skill: Ethereal Gate is now available to advanced alchemists

01-05-21 : List characters in the account menu now shows the race and 
             classes of each of the characters.

01-01-21 : More Garble tweaks
           - Even easier to understand with maxed language skills
           - Group tells are now considered non-verbal communication
             The same as newbie or wiznet channels.

12-21-20 : Garble tweaks
           - Non-frogs now have a chance to understand bullycroak if
             they know the skill
           - Perception now gives you a bonus to understand garbled
             Speaking
           - It is overall easier to understand garbled speech

11-05-20 : Reworked spell crit
           - Increased crit range to between .1% and 10%
           - Wisdom and to a smaller extent Karma determine the rate