@@ -5,9 +5,16 @@
            - It's very easy to hit the Armor cap. Going to decrease armor on buff spells
            accross the board somewhat to try to tone it down. Hopefully make things more
            diverse and fun at the same time.
-           - Deikhan and Cleric Armor spell down to 70AC
+           - Deikhan and Cleric Armor spell down to 60AC
            - Deikhan Aura of might now 40AC
-           - Sanctuary protection reduced but now provides the same amount to others
+           - Cleric Sanctuary protection reduced but now provides the same amount to others
+           - NEW PRAYER: Clerics have now been authorized to invoke the powerful Crusade
+             prayer. Group Armor, Bless and more!
+           - Shaman Shield of mists down to 60AC
+           - Shaman Cheval no longer has any AC benefit
+           - Shaman Celerite no longer has any AC benefit
+           - Shaman Shadow walk now grants some immunity to non-magic
+           - Mage stuff to follow soon...
 
 06-25-21 : Monk Stuff
            - Reduce mana cost of Chain and Blur
